Correct odl-gnmi dependencies
- minimize declared upstreams
- use ranges for upstream features
- use proper feature for iana-if-type

Change-Id: Ibb4ecd0b45edce0a8a78006118e34d13d46ec4c3
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/features/odl-gnmi/pom.xml
+++ b/features/odl-gnmi/pom.xml
@@ -24,6 +24,13 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.opendaylight.mdsal.model</groupId>
+            <artifactId>odl-mdsal-model-rfc7224</artifactId>
+            <version>14.0.18</version>
+            <type>xml</type>
+            <classifier>features</classifier>
+        </dependency>
+        <dependency>
             <groupId>org.opendaylight.netconf</groupId>
             <artifactId>odl-restconf</artifactId>
             <version>9.0.1</version>
@@ -42,29 +49,6 @@
             <groupId>com.guicedee.services</groupId>
             <artifactId>javax.inject</artifactId>
             <optional>true</optional>
-        </dependency>
-
-        <dependency>
-            <groupId>org.opendaylight.aaa</groupId>
-            <artifactId>odl-aaa-encryption-service</artifactId>
-            <version>0.21.2</version>
-            <type>xml</type>
-            <classifier>features</classifier>
-        </dependency>
-
-        <dependency>
-            <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>odl-yangtools-parser</artifactId>
-            <version>14.0.17</version>
-            <type>xml</type>
-            <classifier>features</classifier>
-        </dependency>
-        <dependency>
-            <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>odl-yangtools-xpath</artifactId>
-            <version>14.0.17</version>
-            <type>xml</type>
-            <classifier>features</classifier>
         </dependency>
 
         <dependency>
