--- a/gnmi-parent/pom.xml
+++ b/gnmi-parent/pom.xml
@@ -22,6 +22,11 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <properties>
+        <protobuf.version>3.25.8</protobuf.version>
+        <grpc.version>1.75.0</grpc.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.testng</groupId>
