--- a/models/gnmi-models/force-capabilities/pom.xml
+++ b/models/gnmi-models/force-capabilities/pom.xml
@@ -18,7 +18,7 @@
     </parent>
 
     <groupId>org.opendaylight.gnmi</groupId>
-    <artifactId>odl-gnmi-topology-model</artifactId>
+    <artifactId>force-capabilities</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -30,13 +30,18 @@
             <artifactId>ietf-topology</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.opendaylight.mdsal.binding.model.ietf</groupId>
-            <artifactId>rfc6991-ietf-inet-types</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.opendaylight.mdsal.model</groupId>
             <artifactId>yang-ext</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.opendaylight.gnmi</groupId>
+            <artifactId>topology-model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.gnmi</groupId>
+            <artifactId>yang-storage-model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
-
 </project>
