--- a/models/gnmi-models/topology-model/pom.xml
+++ b/models/gnmi-models/topology-model/pom.xml
@@ -18,10 +18,25 @@
     </parent>
 
     <groupId>org.opendaylight.gnmi</groupId>
-    <artifactId>odl-gnmi-certificates-storage-model</artifactId>
+    <artifactId>topology-model</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <name>${project.groupId}:${project.artifactId}</name>
     <url>https://lf-opendaylight.atlassian.net/wiki/spaces/ODL/pages/489062430/gNMI+project</url>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.opendaylight.mdsal.model</groupId>
+            <artifactId>ietf-topology</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.mdsal.binding.model.ietf</groupId>
+            <artifactId>rfc6991-ietf-inet-types</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.mdsal.model</groupId>
+            <artifactId>yang-ext</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
