--- a/features/features-gnmi/pom.xml
+++ b/features/features-gnmi/pom.xml
@@ -37,7 +37,7 @@
     <dependencies>
         <dependency>
             <groupId>org.opendaylight.gnmi</groupId>
-            <artifactId>odl-gnmi</artifactId>
+            <artifactId>odl-gnmi-all</artifactId>
             <version>${project.version}</version>
             <type>xml</type>
             <classifier>features</classifier>
