--- a/features/odl-gnmi-all/pom.xml
+++ b/features/odl-gnmi-all/pom.xml
@@ -17,7 +17,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>odl-gnmi</artifactId>
+    <artifactId>odl-gnmi-all</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>feature</packaging>
     <name>OpenDaylight :: gNMI</name>
