--- a/models/gnmi-models/sonic-yang-model/pom.xml
+++ b/models/gnmi-models/sonic-yang-model/pom.xml
@@ -16,7 +16,7 @@
     </parent>
 
     <groupId>org.opendaylight.gnmi</groupId>
-    <artifactId>odl-gnoi-sonic-yang-model</artifactId>
+    <artifactId>sonic-yang-model</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <name>${project.groupId}:${project.artifactId}</name>
