--- a/modules/gnmi-test/pom.xml
+++ b/modules/gnmi-test/pom.xml
@@ -151,7 +151,7 @@
         </dependency>
         <dependency>
             <groupId>org.opendaylight.gnmi</groupId>
-            <artifactId>odl-gnmi-certificates-storage-model</artifactId>
+            <artifactId>certificates-storage-model</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -176,12 +176,12 @@
         </dependency>
         <dependency>
             <groupId>org.opendaylight.gnmi</groupId>
-            <artifactId>odl-gnmi-topology-model</artifactId>
+            <artifactId>topology-model</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.gnmi</groupId>
-            <artifactId>odl-gnmi-yang-storage-model</artifactId>
+            <artifactId>yang-storage-model</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
