Use error_prone_annotations
Use error_prone_annotations instead of adding dependency to io.grpc
which uses not karaf compatible jsr305.

Change-Id: I657cab5961c98ced8b07eea8ad1a1206a2ca1763
Signed-off-by: Ivan Hrasko <ivan.hrasko@pantheon.tech>

--- a/features/odl-gnmi-all/pom.xml
+++ b/features/odl-gnmi-all/pom.xml
@@ -50,11 +50,10 @@
             <artifactId>javax.inject</artifactId>
             <optional>true</optional>
         </dependency>
-
         <dependency>
-            <groupId>io.grpc</groupId>
-            <artifactId>grpc-protobuf-lite</artifactId>
-            <version>1.75.0</version>
+            <groupId>com.google.errorprone</groupId>
+            <artifactId>error_prone_annotations</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>io.perfmark</groupId>
