--- a/models/gnmi-models/force-capabilities/pom.xml
+++ b/models/gnmi-models/force-capabilities/pom.xml
@@ -20,6 +20,7 @@
     <groupId>org.opendaylight.gnmi</groupId>
     <artifactId>force-capabilities</artifactId>
     <version>2.0.0-SNAPSHOT</version>
+    <packaging>bundle</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
     <url>https://lf-opendaylight.atlassian.net/wiki/spaces/ODL/pages/489062430/gNMI+project</url>
