--- a/models/openconfig-models/pom.xml
+++ b/models/openconfig-models/pom.xml
@@ -19,6 +19,7 @@
     <groupId>org.opendaylight.gnmi</groupId>
     <artifactId>openconfig-models</artifactId>
     <version>2.0.0-SNAPSHOT</version>
+    <packaging>bundle</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
     <url>https://lf-opendaylight.atlassian.net/wiki/spaces/ODL/pages/489062430/gNMI+project</url>
