Do not use grpc.version for dependency management
grpc-api et al. are a stinking pile where annotations are concerned and
we will need to do some sanitization.

Declare all needed gnmi dependencies in a dependencyManagement section,
from where we can evolve things.

Change-Id: I4cf623b11b6fdffee9bcebbcd2c89d22485cc98c
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/gnmi-parent/pom.xml
+++ b/gnmi-parent/pom.xml
@@ -27,15 +27,6 @@
         <grpc.version>1.75.0</grpc.version>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>7.11.0</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -45,8 +36,44 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            <!-- gRPC: we are not using BOM to deal with all the funky exclusions we need -->
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-api</artifactId>
+                <version>${grpc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-protobuf</artifactId>
+                <version>${grpc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-protobuf-lite</artifactId>
+                <version>${grpc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-netty</artifactId>
+                <version>${grpc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-stub</artifactId>
+                <version>${grpc.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.11.0</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <profiles>
         <profile>
