--- a/modules/gnmi-sb/pom.xml
+++ b/modules/gnmi-sb/pom.xml
@@ -27,6 +27,19 @@
         <maven.javadoc.failOnWarnings>false</maven.javadoc.failOnWarnings>
     </properties>
 
+    <!-- temporary hack until we get to a reasonable shape where dependency management is concerned -->
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.opendaylight.gnmi</groupId>
+                <artifactId>gnmi-parent</artifactId>
+                <version>2.0.0-SNAPSHOT</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -53,7 +66,6 @@
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-api</artifactId>
-            <version>1.75.0</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.gnmi</groupId>
