Exclude jsr305 from gnmi artifacts
jsr305 annotations are a dead thing, make sure we do not end up
dependning on them by accident.

Change-Id: I97bc040c2d8ed4c4a8e6cc499b842b88fd73b0fd
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/modules/gnmi-proto/pom.xml
+++ b/modules/gnmi-proto/pom.xml
@@ -49,6 +49,15 @@
             <groupId>io.grpc</groupId>
             <artifactId>grpc-stub</artifactId>
         </dependency>
+
+        <!-- This dependency is excluded by default, here we need it to get compilation working -->
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>3.0.2</version>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
