--- a/.github/workflows/gerrit-verify.yaml
+++ b/.github/workflows/gerrit-verify.yaml
@@ -92,7 +92,7 @@ jobs:
       - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
         if: ${{ env.ACT == 'true' }}
         with:
-          python-version: '3.x'
+          python-version: "3.x"
       - name: Install tox
         if: ${{ env.ACT == 'true' }}
         run: pip install --upgrade pip && pip install tox
@@ -182,7 +182,13 @@ jobs:
 
   vote:
     if: ${{ always() }}
-    needs: [call-gerrit-tox-verify, call-gerrit-maven-verify, call-gerrit-repo-linting, call-gerrit-change-info]
+    needs:
+      [
+        call-gerrit-tox-verify,
+        call-gerrit-maven-verify,
+        call-gerrit-repo-linting,
+        call-gerrit-change-info,
+      ]
     runs-on: ubuntu-latest
     timeout-minutes: 5
     # yamllint disable rule:line-length
